# harv

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.opencode/plans/: harvconfig.md
crates/harv-cli/: Cargo.toml
crates/harv-cli/src/: header.rs  lib.rs  main.rs  output.rs  prompts.rs  resolution.rs  spinner.rs
crates/harv-cli/src/commands/: alias.rs  config_cmd.rs  connect.rs  disconnect.rs  edit.rs  init.rs  log.rs  mod.rs  note.rs  projects.rs  start.rs  status.rs  stop.rs  tasks.rs  track.rs  whoami.rs
crates/harv-cli/tests/: cli_tests.rs  command_tests.rs
crates/harv-core/: Cargo.toml  build.rs
crates/harv-core/locales/de/: main.ftl
crates/harv-core/locales/en/: main.ftl
crates/harv-core/locales/es/: main.ftl
crates/harv-core/locales/fr/: main.ftl
crates/harv-core/locales/it/: main.ftl
crates/harv-core/locales/nl/: main.ftl
crates/harv-core/src/: datetime.rs  error.rs  lib.rs  locale.rs  text.rs  types.rs
crates/harv-sdk/: Cargo.toml
crates/harv-sdk/src/: auth.rs  cache.rs  client.rs  config.rs  lib.rs  mock_data.rs  mock_server.rs  pagination.rs  project_config.rs  resolved_config.rs  template.rs  updater.rs
crates/harv-sdk/src/resources/: clients.rs  company.rs  mod.rs  projects.rs  tasks.rs  time_entries.rs  users.rs
crates/harv-sdk/tests/: api_tests.rs
crates/harv-tui/: Cargo.toml
crates/harv-tui/src/: action.rs  app.rs  lib.rs  loading.rs  main.rs  popup.rs  theme.rs  tui.rs
crates/harv-tui/src/views/: dashboard.rs  date_picker.rs  form.rs  help.rs  mod.rs
crates/harv-tui/tests/: render_tests.rs
