[workspace]
members = ["crates/harv-core", "crates/harv-sdk", "crates/harv-cli", "crates/harv-tui"]
resolver = "2"

[workspace.package]
version = "0.3.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/josbeir/harv"
homepage = "https://github.com/josbeir/harv"

[workspace.metadata.release]
tag-name = "v{{version}}"
publish = false
