[package]
name = "harv-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Harvest time tracking"

[[bin]]
name = "harv"
path = "src/main.rs"

[dependencies]
harv-core = { path = "../harv-core" }
harv-sdk = { path = "../harv-sdk" }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
tabled = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
inquire = "0.7"
chrono = "0.4"
serde_json = "1"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
