[package]
name = "harv-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Domain types and errors for the Harvest time tracking CLI"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"
