[package]
name = "harv-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Domain types and errors for the Harvest time tracking CLI"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
unic-langid = "0.9"
sys-locale = "0.3"
icu = { version = "2", features = ["compiled_data"] }
icu_datetime = { version = "2", features = ["compiled_data", "unstable_chrono_0_4"] }

[dev-dependencies]
serde_json = "1"
serial_test = "3"
