[package]
name = "harv-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for Harvest time tracking"

[[bin]]
name = "harv-tui"
path = "src/main.rs"

[dependencies]
harv-core = { path = "../harv-core" }
harv-sdk = { path = "../harv-sdk" }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
chrono = "0.4"
tracing = "0.1"
futures-util = "0.3"

[lib]
name = "harv_tui"
path = "src/lib.rs"
