[package]
name = "harv-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for Harvest time tracking"

[dependencies]
harv-core = { path = "../harv-core" }
harv-sdk = { path = "../harv-sdk" }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
chrono = "0.4"
tracing = "0.1"
futures-util = "0.3"
dark-light = "2.0"
unicode-width = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", features = ["tokio", "settings"] }

[lib]
name = "harv_tui"
path = "src/lib.rs"

[features]
mock-mode = ["harv-sdk/mock-mode"]

[dev-dependencies]
wiremock = "0.6"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
